# tagsearch

./: Cargo.toml  LICENSE  Makefile  README.md  bitstring_filter.go  filter.go  go.mod  go.sum  main.go  medium-tag-file.md  taglist.go  tags  tagsearch.go  use_cases.md
benches/: tagparse.rs
completions/: _tagsearch
doc/: tagsearch.1  tagsearch.1.md
src/: filter.rs  lib.rs  list.rs  main.rs  utility.rs
