[package]
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
categories = ["command-line-interface", "text-processing"]
description = "Filter plaintext files based on @keyword tags"
edition = "2018"
license = "MIT"
name = "tagsearch"
readme = "README.md"
repository = "https://www.github.com/ChrisDavison/tagsearch"
version = "0.34.0"

[[bin]]
name = "tagsearch"
path = "bin/main.rs"

[dependencies]
glob = "0.3.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1"
clap = { version = "3.1.2", features = ["derive", "cargo"] }
